Add UI with functions for managing historical data and subjects' weights.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/style.css
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/static/css/style.css
@@ -243,3 +243,9 @@ input:checked + .slider:before {
 .btn-role {
     font-size: 1.4em;
 }
+
+.sidebar{
+    position: absolute;
+    margin-top:80px;
+    margin-left: 30px;
+}
