--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
@@ -23,11 +23,10 @@
     <span class="title-header">Career Trend Suggestions</span>
     <div class="collapse navbar-collapse  justify-content-center  menu">
     </div>
-    <span class="fa-stack">
-            <i class="	fa fa-user-circle-o fa-stack-1x" style="font-size:36px; color:white"></i>
-            <i class="	fa fa-user-circle-o fa-stack-1x"
-               style="font-size:36px; color:white"></i>
-        </span>
+    <span id="currentUser"
+          style="font-size: 25px; color: white">
+        Sign In
+    </span>
 </nav>
 </body>
 </html>
