--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/high-school/result.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/high-school/result.html
@@ -122,7 +122,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div id="entranceExamInput"
+            <div id="entranceExamResults"
                  class="row modal-body justify-content-between">
 
             </div>
@@ -263,7 +263,7 @@
 <script th:src="@{js/suggestion/result.js}"></script>
 <script>
     window.onload = function () {
-        retrieveSubjects('entranceExamInput')
+        retrieveSubjects('entranceExamResults')
 
         let suggestions = JSON.parse(sessionStorage.getItem('suggestions'));
         showSuggestions(suggestions)
