--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/keyword-management.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/keyword-management.html
@@ -55,9 +55,11 @@
                                     Keyword Data Table
                                 </h3>
                                 <div class="row">
-                                    <div class="dataTables_length" id="dataTable_length">
+                                    <div class="dataTables_length">
                                         <label>Show
-                                            <select name="dataTable_length" aria-controls="dataTable" class="">
+                                            <select id="dataTable_length" name="dataTable_length"
+                                                    aria-controls="dataTable"
+                                                    onchange="changeItemPerPage()">
                                                 <option value="10">10</option>
                                                 <option value="25">25</option>
                                                 <option value="50">50</option>
@@ -78,7 +80,7 @@
                                 <table class="table table-striped table-bordered ">
                                     <thead>
                                     <tr>
-                                        <th>No</th>
+                                        <th>ID</th>
                                         <th>Keyword</th>
                                         <th>Synonym</th>
                                         <th>Action</th>
@@ -132,7 +134,8 @@
                                 </table>
 
                                 <div class="row">
-                                    <ul class="pagination ml-auto">
+                                    <ul id="pagination"
+                                        class="pagination ml-auto">
                                         <li class="page-item"><a class="page-link" href="#">Previous</a></li>
                                         <li class="page-item"><a class="page-link" href="#">1</a></li>
                                         <li class="page-item"><a class="page-link" href="#">2</a></li>
@@ -166,8 +169,27 @@
 <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 <script>
+    let keywordIds = []
+    let totalPages = 0
+    let currentPage = 1
+    let itemPerPage = $('#dataTable_length').children("option:selected").val();
+
     window.addEventListener('load', function () {
-        for (let i = 1; i <= document.forms.length; i++) {
+        (function () {
+            getTotalPages(itemPerPage)
+            getKeywords(itemPerPage, currentPage)
+        })()
+    });
+
+    function changeItemPerPage() {
+        itemPerPage = $('#dataTable_length').children("option:selected").val();
+        getTotalPages(itemPerPage)
+        changePage(1)
+        getKeywords(itemPerPage, 1)
+    }
+
+    function getKeywords(itemPerPage, page) {
+        /*for (let i = 1; i <= document.forms.length; i++) {
             document.forms[i - 1].reset();
             let input = document.querySelector('input[name=read' + i + ']'),
                 tagify = new Tagify(input);
@@ -176,41 +198,74 @@
         for (let i = 1; i <= document.forms.length; i++) {
             let input = document.querySelector('input[name=tags' + i + ']'),
                 tagify = new Tagify(input, {});
+        }*/
+
+        axios.get('http://localhost:8001/keywords?item-per-page=' + itemPerPage + '&page=' + page)
+            .then((response) => {
+                keywordIds = []
+                let synonymsTable = document.getElementById('synonymsTable');
+                synonymsTable.innerHTML = ''
+
+                let keywords = response.data;
+
+                for (keyword of keywords) {
+                    keywordIds.push(keyword.id)
+                    let row = retrieveSynonyms(keyword);
+                    synonymsTable.appendChild(row);
+                }
+            }).then(() => {
+            for (let i = 0; i < keywordIds.length; i++) {
+                // document.forms[i - 1].reset();
+                let input = document.querySelector('input[name=read' + keywordIds[i] + ']'),
+                    tagify = new Tagify(input);
+            }
+
+            for (let i = 0; i < keywordIds.length; i++) {
+                let input = document.querySelector('input[name=tags' + keywordIds[i] + ']'),
+                    tagify = new Tagify(input, {});
+            }
+        });
+    }
+
+    function getTotalPages(itemPerPage) {
+        axios.get('http://localhost:8001/keywords/pages-count?item-per-page=' + itemPerPage)
+            .then((response) => {
+                totalPages = parseInt(response.data)
+
+                let pagination = $('#pagination')
+                pagination.empty()
+                for (let i = 0; i < totalPages; i++) {
+                    if (currentPage === (i + 1)) {
+                        pagination.append('<li class="page-item active"><a class="page-link" href="#" onclick="changePage(' + (i + 1) + ')">' + (i + 1) + '</a></li>')
+                    } else {
+                        pagination.append('<li class="page-item"><a class="page-link" href="#" onclick="changePage(' + (i + 1) + ')">' + (i + 1) + '</a></li>')
+                    }
+                }
+            })
+    }
+
+    function changePage(page) {
+        currentPage = page
+
+        let pagination = $('#pagination')
+        pagination.empty()
+        for (let i = 0; i < totalPages; i++) {
+            if (currentPage === (i + 1)) {
+                pagination.append('<li class="page-item active"><a class="page-link" href="#" onclick="changePage(' + (i + 1) + ')">' + (i + 1) + '</a></li>')
+            } else {
+                pagination.append('<li class="page-item"><a class="page-link" href="#" onclick="changePage(' + (i + 1) + ')">' + (i + 1) + '</a></li>')
+            }
         }
 
-        // (function () {
-        //     axios.get('http://localhost:8001/keywords')
-        //         .then((response) => {
-        //             let synonymsTable = document.getElementById('synonymsTable');
-        //             synonymsTable.innerHTML = ''
-        //
-        //             let keywords = response.data;
-        //
-        //             for (keyword of keywords) {
-        //                 let row = retrieveSynonyms(keyword);
-        //                 synonymsTable.appendChild(row);
-        //             }
-        //         }).then(() => {
-        //         for (let i = 1; i <= document.forms.length; i++) {
-        //             document.forms[i - 1].reset();
-        //             let input = document.querySelector('input[name=read' + i + ']'),
-        //                 tagify = new Tagify(input);
-        //         }
-        //
-        //         for (let i = 1; i <= document.forms.length; i++) {
-        //             let input = document.querySelector('input[name=tags' + i + ']'),
-        //                 tagify = new Tagify(input, {});
-        //         }
-        //     });
-        // })()
-    });
+        getKeywords(itemPerPage, page)
+    }
 
     function retrieveSynonyms(keyword) {
         let row = document.createElement('tr')
 
-        let numberCell = document.createElement('td')
-        numberCell.innerHTML = keyword.id
-        row.appendChild(numberCell)
+        let idCell = document.createElement('td')
+        idCell.innerHTML = keyword.id
+        row.appendChild(idCell)
 
         let keywordCell = document.createElement('td')
         keywordCell.innerHTML = keyword.word
