--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/web-admin.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/web-admin.html
@@ -107,7 +107,7 @@
 
                 <li class="mT-30 nav-item">
                     <a class="sidebar-link"
-                       href="business-field.html">
+                       href="/admin/major">
                         <span class="icon-holder">
                             <i class="fas fa-graduation-cap"></i>
                         </span>
@@ -134,7 +134,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="sidebar-link"
-                       href="keyword.html">
+                       href="/admin/keyword">
                         <span class="icon-holder">
                             <i class="fas fa-book"></i>
                         </span>
@@ -152,6 +152,31 @@
                     </a>
                 </li>
 
+                <li class="nav-item dropdown">
+                    <a class="dropdown-toggle" href="javascript:void(0);">
+                        <span class="icon-holder">
+                            <i class="fas fa-history"></i>
+                        </span>
+                        <span class="title">Historical Data</span>
+                    </a>
+                    <ul class="dropdown-menu" style="display: none;">
+                        <li><a class="sidebar-link" href="/admin/hr">Human Resources</a></li>
+                        <li><a class="sidebar-link" href="/admin/spInfo">Supporting Information</a></li>
+                    </ul>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a class="dropdown-toggle" href="javascript:void(0);">
+                        <span class="icon-holder">
+                            <i class="fas fa-history"></i>
+                        </span>
+                        <span class="title">Subjects' Weights</span>
+                    </a>
+                    <ul class="dropdown-menu" style="display: none;">
+                        <li><a class="sidebar-link" href="/admin/high-school">High School</a></li>
+                        <li><a class="sidebar-link" href="/admin/entrance-exam">Entrance Exam</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
@@ -166,11 +191,6 @@
                         <a href=""
                            class="dropdown-toggle no-after peers fxw-nw ai-c lh-1"
                            data-toggle="dropdown">
-                            <div class="peer mR-10">
-                                <img class="w-2r bdrs-50p"
-                                     src="https://randomuser.me/api/portraits/men/10.jpg"
-                                     alt="">
-                            </div>
                             <div class="peer">
                                 <span class="fsz-sm c-grey-900">
                                     John Doe
