Add UI with functions for managing historical data and subjects' weights.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/web-admin.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/web-admin.html
@@ -168,7 +168,7 @@
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle" href="javascript:void(0);">
                         <span class="icon-holder">
-                            <i class="fas fa-history"></i>
+                            <i class="fas fa-wrench"></i>
                         </span>
                         <span class="title">Subjects' Weights</span>
                     </a>
