Change UI adding hyperlink for algorithms.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/major-detail.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/major-detail.html
@@ -209,8 +209,11 @@
                             Analysis)
                         </p>
                         <p style="font-style: italic">
-                            Hệ thống CTSA đưa ra dự đoán bằng cách áp dụng công thức
+                            Hệ thống CTSA đưa ra dự đoán bằng cách áp dụng công thức <a
+                                href="https://otexts.org/fpp2/holt.html">
                             Holt’s Exponential Smoothing.
+                        </a>
+
                         </p>
                     </div>
                 </div>
