Finish Capstone Project Defense Ceremony.

--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/fragments/general.html
@@ -23,10 +23,10 @@
     <span class="title-header">Career Trend Suggestions</span>
     <div class="collapse navbar-collapse  justify-content-center  menu">
     </div>
-    <span id="currentUser"
+    <!--<span id="currentUser"
           style="font-size: 25px; color: white">
         Sign In
-    </span>
+    </span>-->
 </nav>
 </body>
 </html>
