--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/high-school-management.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/high-school-management.html
@@ -156,6 +156,9 @@
     window.addEventListener('load', function () {
         (function () {
             getData()
+
+            let currentUser = JSON.parse(sessionStorage.getItem('currentUser'))
+            $('#current-user').html(currentUser.fullname)
         })()
     });
 
