--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/human-resources-management.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/human-resources-management.html
@@ -220,6 +220,9 @@
             }
             getTotalPages(itemPerPage)
             getData(itemPerPage, currentPage)
+
+            let currentUser = JSON.parse(sessionStorage.getItem('currentUser'))
+            $('#current-user').html(currentUser.fullname)
         })()
     })
 
