--- a/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/keyword-management.html
+++ b/web-ui/web-v0.8/ctsa-webapp/src/main/resources/templates/staff/keyword-management.html
@@ -178,6 +178,9 @@
         (function () {
             getTotalPages(itemPerPage)
             getKeywords(itemPerPage, currentPage)
+
+            let currentUser = JSON.parse(sessionStorage.getItem('currentUser'))
+            $('#current-user').html(currentUser.fullname)
         })()
     });
 
